# visualize_universe

./: CMakeLists.txt  README.md
framework/: transfer_function.cpp  utils.cpp  utils.hpp  window.cpp
source/: CMakeLists.txt  visualize_universe.cpp
source/shader/: multi.frag  volume.frag
